fixed a issued with the background on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,12 @@
 body{
 	background-image: url("../images/background.jpg");
+    background-repeat: no-repeat; 
+    background-position: center;
+    background-attachment: fixed;       
+    webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover; 
 }
 img{
 	width: 200px;
